--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,5 @@
 <h1>Seja bem Vindo</h1>
 
-<p>Renato Almeida</p>
-
-<p>A soma é: <%= 1 + 1 %></p>
-<p>Seu segundo nome de trás pra frente é: <%= "Sousa".reverse %></p>
-<% ax = "Minha nova variável"%>
-<p>Imprimindo minha variável A: <%= ax %></p>
-<p>A data de hoje é: <%= Date.today %></p>
+<ul>
+  <li><%= link_to "Cadastro de Moedas", coins_path %></li>
+</ul>
