--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: coin) do |form| %>
+<%= form_with(model: coin, local: true) do |form| %>
   <% if coin.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(coin.errors.count, "error") %> prohibited this coin from being saved:</h2>
@@ -14,19 +14,23 @@
   <div>
     <%= form.label :description, style: "display: block" %>
     <%= form.text_field :description %>
+    <p>
   </div>
 
   <div>
     <%= form.label :acronym, style: "display: block" %>
     <%= form.text_field :acronym %>
+    <p>
   </div>
 
   <div>
     <%= form.label :url_image, style: "display: block" %>
     <%= form.text_field :url_image %>
+    <p>
   </div>
 
   <div>
     <%= form.submit %>
+    <p>
   </div>
 <% end %>
