--- a/app/views/coins/edit.html.erb
+++ b/app/views/coins/edit.html.erb
@@ -2,9 +2,9 @@
 
 <%= render "form", coin: @coin %>
 
-<br />
+<br/>
 
 <div>
-  <%= link_to "Show this coin", @coin%> | 
-  <%= link_to "Back to coins", coins_path %>
+  <%= link_to "Show", @coin%> | 
+  <%= link_to "Back", coins_path %>
 </div>
