--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -2,11 +2,29 @@
 
 <h1>Moedas</h1>
 
-<div id="coins">
-    <% @coins.each do |coin| %> <%= render coin %> 
-    <% end %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Descrição</th>
+      <th>Sigla</th>
+      <th>Imagem</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<div>
-  <p><%= link_to "New coin", new_coin_path %></p>
-</div>
+  <tbody>
+    <% @coins.each do |coin| %>
+    <tr>
+      <td><%= coin.description %></td>
+      <td><%= coin.acronym %></td>
+      <td><%= image_tag coin.url_image, size: "25x25" %></td>
+      <td><%= link_to "Mostrar", coin %></td>
+      <td><%= link_to "Editar", edit_coin_path(coin) %></td>
+      <td><%= link_to "Excluir", coin %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
+  <p><%= link_to "Nova Moeda", new_coin_path %></p>
+
