--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Seja bem Vindo</h1>
 
+<p><strong>Data: </strong><%= data_br(Date.today) %></p>
 <ul>
   <li><%= link_to "Cadastro de Moedas", coins_path %></li>
 </ul>
