Renderização com Partials

--- a/app/views/coins/edit.html.erb
+++ b/app/views/coins/edit.html.erb
@@ -2,6 +2,8 @@
 
 <%= render "form", coin: @coin %>
 
+<p><%= button_to "Excluir", @coin, method: :delete, data: { confirm: 'Tem certeza ?' } %></p>
+
 <br/>
 
 <div>
