--- a/app/views/coins/_coin.html.erb
+++ b/app/views/coins/_coin.html.erb
@@ -11,6 +11,6 @@
 
   <p>
     <strong>Imagem:</strong>
-    <img src="<%= @coin.url_image %>" width="25px" height="25px" />
+    <%= image_tag @coin.url_image, size: "25x25" %>
   </p>
 </div>
