--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Moedas</h1>
 
-<table>
-  <thead>
+<table width="500">
+  <thead align="left">
     <tr>
       <th>Descrição</th>
       <th>Sigla</th>
@@ -12,7 +12,7 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody >  
     <% @coins.each do |coin| %>
     <tr>
       <td><%= coin.description %></td>
@@ -20,7 +20,6 @@
       <td><%= image_tag coin.url_image, size: "25x25" %></td>
       <td><%= link_to "Mostrar", coin %></td>
       <td><%= link_to "Editar", edit_coin_path(coin) %></td>
-      <td><%= link_to "Excluir", coin %></td>
     </tr>
     <% end %>
   </tbody>
