--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,11 @@
 <h1>Seja bem Vindo</h1>
 
 <p><strong>Data: </strong><%= data_br(Date.today) %></p>
-<ul>
-  <li><%= link_to "Cadastro de Moedas", coins_path %></li>
-</ul>
+
+<%= render 'menu' %>
+
+<p>Você está  em ambiente de <strong><%= ambiente_rails %></strong></p>
+
+<p>Eu sou uma variável de instância <strong><%= @meu_nome %></strong></p>
+
+<p>Meu curso é o de <strong><%= @curso %></strong></p>
